--- a/epcurate-curation.html
+++ b/epcurate-curation.html
@@ -282,108 +282,6 @@
 <p class="notice">+ Add videos here</p>
 <ul id="storyboard-listing">
 <!-- template = #storyboard-listing-tmpl-item -->
-
-<!--
-<li>
-<a href="#" class="warning"><span class="tip"><img src="images/bg_tip_bottom.png" alt="" /><span class="tip-left"><span class="tip-right"><span class="tip-middle">Not playable in some regions</span></span></span></span></a>
-<p class="img">
-<img src="http://i.ytimg.com/vi/nCgQDjiotG0/default.jpg" alt="" width="80" height="45" />
-<span class="time"><span class="time-right"><span class="time-middle">02:13:10</span></span></span>
-</p>
-<h4 class="ellipsis multiline">Google Chrome Speed Tests</h4>
-<p class="title">
-<a href="#" class="begin-title">Edit<span class="tip"><span class="tip-left"><span class="tip-right"><span class="tip-middle">Preview Title</span></span></span></span></a>
-<a href="#" class="end-title">Edit<span class="tip"><span class="tip-left"><span class="tip-right"><span class="tip-middle">Preview Title</span></span></span></span></a>
-</p>
-<p class="hover-func">
-<a href="#" class="video-del">Video Del</a>
-<a href="#" class="video-play">Video Play</a>
-</p>
-</li>
-<li>
-<p class="img">
-<img src="http://i.ytimg.com/vi/yhS9LnDoo_w/default.jpg" alt="" width="80" height="45" />
-<span class="time"><span class="time-right"><span class="time-middle">06:06</span></span></span>
-</p>
-<h4 class="ellipsis multiline">The Chemical Brothers - The Test (2003 - Remaster)</h4>
-<p class="hover-func">
-<a href="#" class="video-del">Video Del</a>
-<a href="#" class="video-play">Video Play</a>
-<a href="#" class="begin-title">Edit<span class="tip"><span class="tip-left"><span class="tip-right"><span class="tip-middle">Add Title</span></span></span></span></a>
-<a href="#" class="end-title">Edit<span class="tip"><span class="tip-left"><span class="tip-right"><span class="tip-middle">Add Title</span></span></span></span></a>
-</p>
-</li>
-<li>
-<p class="img">
-<img src="http://i.ytimg.com/vi/ubNF9QNEQLA/default.jpg" alt="" width="80" height="45" />
-<span class="time"><span class="time-right"><span class="time-middle">01:55</span></span></span>
-</p>
-<h4 class="ellipsis multiline">Test Your Awareness : Whodunnit?</h4>
-<p class="title">
-<a href="#" class="begin-title">Edit<span class="tip"><span class="tip-left"><span class="tip-right"><span class="tip-middle">Preview Title</span></span></span></span></a>
-<a href="#" class="end-title">Edit<span class="tip"><span class="tip-left"><span class="tip-right"><span class="tip-middle">Preview Title</span></span></span></span></a>
-</p>
-<p class="hover-func">
-<a href="#" class="video-del">Video Del</a>
-<a href="#" class="video-play">Video Play</a>
-</p>
-</li>
-<li>
-<p class="img">
-<img src="http://i.ytimg.com/vi/4G60hM1W_mk/default.jpg" alt="" width="80" height="45" />
-<span class="time"><span class="time-right"><span class="time-middle">05:12</span></span></span>
-</p>
-<h4 class="ellipsis multiline">Hearing Test</h4>
-<p class="hover-func">
-<a href="#" class="video-del">Video Del</a>
-<a href="#" class="video-play">Video Play</a>
-<a href="#" class="begin-title">Edit<span class="tip"><span class="tip-left"><span class="tip-right"><span class="tip-middle">Add Title</span></span></span></span></a>
-<a href="#" class="end-title">Edit<span class="tip"><span class="tip-left"><span class="tip-right"><span class="tip-middle">Add Title</span></span></span></span></a>
-</p>
-</li>
-<li>
-<a href="#" class="error"><span class="tip"><img src="images/bg_tip_bottom.png" alt="" /><span class="tip-left"><span class="tip-right"><span class="tip-middle">Not playable outside YouTube</span></span></span></span></a>
-<p class="img">
-<img src="http://i.ytimg.com/vi/vJG698U2Mvo/default.jpg" alt="" width="80" height="45" />
-<span class="time"><span class="time-right"><span class="time-middle">01:22</span></span></span>
-</p>
-<h4 class="ellipsis multiline">selective attention test</h4>
-<p class="title">
-<a href="#" class="begin-title">Edit<span class="tip"><span class="tip-left"><span class="tip-right"><span class="tip-middle">Preview Title</span></span></span></span></a>
-<a href="#" class="end-title">Edit<span class="tip"><span class="tip-left"><span class="tip-right"><span class="tip-middle">Preview Title</span></span></span></span></a>
-</p>
-<p class="hover-func">
-<a href="#" class="video-del">Video Del</a>
-<a href="#" class="video-play">Video Play</a>
-</p>
-</li>
-<li>
-<p class="img">
-<img src="http://i.ytimg.com/vi/CWyrp3hu4KE/default.jpg" alt="" width="80" height="45" />
-<span class="time"><span class="time-right"><span class="time-middle">02:13:10</span></span></span>
-</p>
-<h4 class="ellipsis multiline">Color Blindness test - Real !</h4>
-<p class="hover-func">
-<a href="#" class="video-del">Video Del</a>
-<a href="#" class="video-play">Video Play</a>
-<a href="#" class="begin-title">Edit<span class="tip"><span class="tip-left"><span class="tip-right"><span class="tip-middle">Add Title</span></span></span></span></a>
-<a href="#" class="end-title">Edit<span class="tip"><span class="tip-left"><span class="tip-right"><span class="tip-middle">Add Title</span></span></span></span></a>
-</p>
-</li>
-<li>
-<p class="img">
-<img src="http://i.ytimg.com/vi/0vu23EbuBVI/default.jpg" alt="" width="80" height="45" />
-<span class="time"><span class="time-right"><span class="time-middle">44:10</span></span></span>
-</p>
-<h4 class="ellipsis multiline">Physics / 100 Greatest Discoveries - Documentary [Full Length]</h4>
-<p class="hover-func">
-<a href="#" class="video-del">Video Del</a>
-<a href="#" class="video-play">Video Play</a>
-<a href="#" class="begin-title">Edit<span class="tip"><span class="tip-left"><span class="tip-right"><span class="tip-middle">Add Title</span></span></span></span></a>
-<a href="#" class="end-title">Edit<span class="tip"><span class="tip-left"><span class="tip-right"><span class="tip-middle">Add Title</span></span></span></span></a>
-</p>
-</li>
--->
 </ul>
 
 <script id="storyboard-listing-tmpl-item" type="text/x-jquery-tmpl">
@@ -410,8 +308,8 @@
 </p>
 <h4 class="ellipsis multiline">${name}</h4>
 <p class="hover-func">
-<a href="#" class="video-del">Video Del</a>
-<a href="#" class="video-play">Video Play</a>
+<a href="#!pid=${id}&ytid=${ytId}" class="video-del">Video Del</a>
+<a href="#!pid=${id}&ytid=${ytId}" class="video-play">Video Play</a>
 </p>
 </li>
 </script>
@@ -425,10 +323,10 @@
 
 <div class="form-btn">
 <div class="wrap">
-<p class="back"><a href="epcurate-info.html" id="form-btn-back">&lt; Back to Information</a></p>
+<p class="back"><a href="epcurate-info.html" id="form-btn-back" rel="info">&lt; Back to Information</a></p>
 <p class="btns btn-leave"><span><input type="button" id="form-btn-leave" value="Leave" /></span></p>
 <p class="btns btn-save"><span><input type="button" id="form-btn-save" value="Save" /></span></p>
-<p class="next"><a href="epcurate-publish.html" id="form-btn-next">Next to Publish &gt;</a></p>
+<p class="next"><a href="epcurate-publish.html" id="form-btn-next" rel="publish">Next to Publish &gt;</a></p>
 </div>
 </div>
 </div>
