--- a/epcurate-info.html
+++ b/epcurate-info.html
@@ -105,7 +105,7 @@
 <div class="wrap clearfix">
 <p class="btns btn-leave"><span><input type="button" id="form-btn-leave" value="Leave" /></span></p>
 <p class="btns btn-save"><span><input type="button" id="form-btn-save" value="Save" /></span></p>
-<p class="next"><a href="epcurate-curation.html" id="form-btn-next">Next to Curation &gt;</a></p>
+<p class="next"><a href="epcurate-curation.html" id="form-btn-next" rel="curation">Next to Curation &gt;</a></p>
 </div>
 </div>
 
