--- a/epcurate-publish.html
+++ b/epcurate-publish.html
@@ -109,7 +109,7 @@
 
 <div class="form-btn">
 <div class="wrap">
-<p class="back"><a href="epcurate-curation.html" id="form-btn-back">&lt; Back to Curation</a></p>
+<p class="back"><a href="epcurate-curation.html" id="form-btn-back" rel="curation">&lt; Back to Curation</a></p>
 <p class="btns btn-leave"><span><input type="button" id="form-btn-leave" value="Leave" /></span></p>
 <p class="btns btn-save"><span><input type="button" id="form-btn-save" value="Save" /></span></p>
 </div>
