--- a/episode-list.html
+++ b/episode-list.html
@@ -129,7 +129,7 @@
 </a>
 <span class="duration"><span class="time-right"><span class="time-middle">${formatDuration(duration)}</span></span></span>
 </p>
-<h3 class="ellipsis"><a href="${playbackUrl}" target="_blank">${name}</a></h3>
+<h3 class="ellipsis" data-meta="${name}"><a href="${playbackUrl}" target="_blank">${name}</a></h3>
 <div class="btns">
 <div class="btn-wrap disable">
 <ul>
@@ -204,7 +204,7 @@
 </a>
 <span class="duration"><span class="time-right"><span class="time-middle">${formatDuration(duration)}</span></span></span>
 </p>
-<h3 class="ellipsis"><a href="${playbackUrl}" target="_blank">${name}</a></h3>
+<h3 class="ellipsis" data-meta="${name}"><a href="${playbackUrl}" target="_blank">${name}</a></h3>
 <div class="btns">
 <div class="btn-wrap enable">
 <ul>
