--- a/epcurate-curation.html
+++ b/epcurate-curation.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+<html>
 <head>
 <meta charset="utf-8" />
 <meta http-equiv="cache-control" content="no-cache" />
@@ -67,6 +68,7 @@
 <!--============================== content-main start ========================-->
 <div id="content-wrap" class="epcurate-curation">
 <form name="epcurateForm" id="epcurateForm" method="get" action="" class="clearfix curation">
+<!-- template = #epcurate-info-tmpl -->
 <input type="hidden" name="id" id="id" value="" />
 <input type="hidden" name="channelId" id="channelId" value="" />
 
@@ -86,10 +88,25 @@
 <li class="last hide on"><span><a href="#cur-edit" class="cur-edit">Edit</a></span></li>
 </ul>
 
+<script id="titlecard-tmpl" type="text/x-jquery-tmpl">
+<div id="titlecard-outer" class="titlecard-outer" style="display: block; position: relative; overflow: hidden; z-index: 50; width: auto; height: ${$item.outerHeight}px; background-color: ${bgColor};">
+<div class="titlecard-middle" style="display: block; position: absolute; width: 100%; height: 100%;">
+<div id="titlecard-inner" class="titlecard-inner" style="display: block; position: absolute; width: 98%; height: auto; text-align: ${align}; font-size: ${$item.fontSize}pt; color: ${color}; font-style: ${style}; font-weight: ${weight};">
+{{html $item.message}}
+</div>
+</div>
+{{if '' != bgImage}}
+<img src="${bgImage}" style="width: 100%; height: 100%; border: none;" />
+{{/if}}
+</div>
+</script>
+
 <div class="curation-content clearfix">
 <p class="auto-height"></p>
 <div id="video-player">
-<div class="video"></div>
+<div class="video">
+<!-- template = #titlecard-tmpl -->
+</div>
 <div id="video-control">
 <p id="play-dragger"></p>
 <div id="progress-bar">
@@ -138,12 +155,15 @@
 {{/if}}
 </script>
 
-<!--
 <div class="edit-title hide disable">
+<!-- template = #titlecard-edit-tmpl -->
+</div>
+
+<script id="titlecard-edit-tmpl" type="text/x-jquery-tmpl">
 <div class="wrap">
 <div class="text-container">
 <h5>Text</h5>
-<textarea name="text" id="text" cols="80" class="textarea">My Video</textarea>
+<textarea name="text" id="text" cols="80" class="textarea">{{if '' == message}}My video{{else}}${message}{{/if}}</textarea>
 </div>
 
 <div class="font-container">
@@ -151,9 +171,13 @@
 <div class="text-func clearfix">
 <div class="func-wrap clearfix">
 <ul>
-<li class="font-weight"><input type="checkbox" name="fontWeight" value="bold" id="fontWeight" />粗體</li>
-<li class="font-style"><input type="checkbox" name="fontStyle" value="italic" id="fontStyle" />斜體</li>
-<li><a href="#" class="font-color">字體顏色<span></span>
+<li class="font-weight"><input type="checkbox" name="fontWeight" value="bold" id="fontWeight"{{if weight == 'bold'}} checked="checked"{{/if}} />粗體</li>
+<li class="font-style"><input type="checkbox" name="fontStyle" value="italic" id="fontStyle"{{if style == 'italic'}} checked="checked"{{/if}} />斜體</li>
+{{if '' == color}}
+<li><a href="#" class="font-color">字體顏色<span class="c-fff"></span>
+{{else}}
+<li><a href="#" class="font-color">字體顏色<span{{if CMS_CONF.COLOR_MAP[color]}} class="${CMS_CONF.COLOR_MAP[color]}"{{/if}}></span>
+{{/if}}
 <ul class="color-list">
 <li class="c-fff" data-meta="#ffffff">#ffffff</li>
 <li class="c-eee" data-meta="#eeeeee">#eeeeee</li>
@@ -169,14 +193,22 @@
 <li class="c-60f" data-meta="#6600ff">#6600ff</li>
 </ul>
 </a>
+{{if '' == color}}
 <input type="hidden" name="fontColor" id="fontColor" value="#ffffff" />
+{{else}}
+<input type="hidden" name="fontColor" id="fontColor" value="${color}" />
+{{/if}}
+{{if '' == size}}
 <input type="hidden" name="fontSize" id="fontSize" value="20" />
+{{else}}
+<input type="hidden" name="fontSize" id="fontSize" value="${size}" />
+{{/if}}
 </li>
 <li><a href="#" class="font-l">字體放大</a></li>
 <li><a href="#" class="font-s">字體縮小</a></li>
-<li class="align-left"><input type="radio" name="align" value="left" id="align_left" />置左</li>
-<li class="align-center"><input type="radio" name="align" value="center" id="align_center" />置中</li>
-<li class="align-right"><input type="radio" name="align" value="right" id="align_right" />置右</li>
+<li class="align-left"><input type="radio" name="align" value="left" id="align_left"{{if align == 'left'}} checked="checked"{{/if}} />置左</li>
+<li class="align-center"><input type="radio" name="align" value="center" id="align_center"{{if align == '' || align == 'center'}} checked="checked"{{/if}} />置中</li>
+<li class="align-right"><input type="radio" name="align" value="right" id="align_right"{{if align == 'right'}} checked="checked"{{/if}} />置右</li>
 </ul>
 </div>
 </div>
@@ -184,10 +216,14 @@
 
 <div class="effect-container">
 <h5>Effect</h5>
-<p class="effect-demo"><span>9x9.tv</span></p>
+<p class="effect-demo"><span><em>9x9.tv</em></span></p>
 <div class="select">
 <p class="select-btn"></p>
+{{if '' == effect}}
 <div class="select-txt"><a href="#">None</a></div>
+{{else}}
+<div class="select-txt"><a href="#">${CMS_CONF.EFFECT_MAP[effect]}</a></div>
+{{/if}}
 <ul class="select-list">
 <li data-meta="none">None</li>
 <li data-meta="fade">Fade</li>
@@ -196,7 +232,11 @@
 <li data-meta="fold">Fold</li>
 <li data-meta="drop">Drop</li>
 </ul>
+{{if '' == effect}}
 <input type="hidden" name="effect" id="effect" value="none" />
+{{else}}
+<input type="hidden" name="effect" id="effect" value="${effect}" />
+{{/if}}
 </div>
 </div>
 </div>
@@ -205,11 +245,15 @@
 <div class="background-container">
 <h5>Background</h5>
 <p class="radio-list">
-<label for="bg_color" class="first"><input type="radio" name="bg" value="color" id="bg_color" checked="checked" />Color</label>
-<label for="bg_image"><input type="radio" name="bg" value="image" id="bg_image" />Image</label>
+<label for="bg_color" class="first"><input type="radio" name="bg" value="color" id="bg_color"{{if bgImage == ''}} checked="checked"{{/if}} />Color</label>
+<label for="bg_image"><input type="radio" name="bg" value="image" id="bg_image"{{if bgImage != ''}} checked="checked"{{/if}} />Image</label>
 </p>
-<div class="bg-color">
-<a href="#">背景顏色<span></span>
+<div class="bg-color{{if bgImage != ''}} hide{{/if}}">
+{{if '' == bgColor}}
+<a href="#">背景顏色<span class="c-000"></span>
+{{else}}
+<a href="#">背景顏色<span{{if CMS_CONF.COLOR_MAP[bgColor]}} class="${CMS_CONF.COLOR_MAP[bgColor]}"{{/if}}></span>
+{{/if}}
 <ul class="color-list">
 <li class="c-fff" data-meta="#ffffff">#ffffff</li>
 <li class="c-eee" data-meta="#eeeeee">#eeeeee</li>
@@ -225,15 +269,26 @@
 <li class="c-60f" data-meta="#6600ff">#6600ff</li>
 </ul>
 </a>
+{{if '' == bgColor}}
 <input type="hidden" name="backgroundColor" id="backgroundColor" value="#000000" />
+{{else}}
+<input type="hidden" name="backgroundColor" id="backgroundColor" value="${bgColor}" />
+{{/if}}
 </div>
-<div class="bg-img hide">
-<p class="img"><img id="thumbnail-backgroundImage" src="images/thumbnail_box_ch.png" alt="" class="thumbnail" /><img src="images/black_box_loading.gif" alt="" class="loading" /></p>
+<div class="bg-img{{if bgImage == ''}} hide{{/if}}">
+<p class="img">
+{{if bgImage == ''}}
+<img id="thumbnail-backgroundImage" src="images/title_bg_default.png" alt="" class="thumbnail" />
+{{else}}
+<img id="thumbnail-backgroundImage" src="${bgImage}" alt="" class="thumbnail" />
+{{/if}}
+<img src="images/black_box_loading.gif" alt="" class="loading" />
+</p>
 <p id="uploadThumbnail">Upload</p>
 <p class="notice">Better results with 720x480 image.</p>
 <p class="notice highlight hide">Please upload jpeg, png, or gif file.</p>
-<input type="hidden" name="backgroundImage" id="backgroundImage" value="" />
-<input type="hidden" name="backgroundImageOld" id="backgroundImageOld" value="" />
+<input type="hidden" name="backgroundImage" id="backgroundImage" value="${bgImage}" />
+<input type="hidden" name="backgroundImageOld" id="backgroundImageOld" value="${bgImage}" />
 </div>
 </div>
 
@@ -241,7 +296,11 @@
 <h5>Duration</h5>
 <div class="select">
 <p class="select-btn"></p>
+{{if '' == duration}}
 <div class="select-txt"><a href="#">7</a></div>
+{{else}}
+<div class="select-txt"><a href="#">${duration}</a></div>
+{{/if}}
 <ul class="select-list">
 <li data-meta="5">5</li>
 <li data-meta="6">6</li>
@@ -254,20 +313,25 @@
 <li data-meta="16">16</li>
 <li data-meta="18">18</li>
 </ul>
+{{if '' == duration}}
 <input type="hidden" name="duration" id="duration" value="7" />
+{{else}}
+<input type="hidden" name="duration" id="duration" value="${duration}" />
+{{/if}}
 </div>
-<p class="notice">Invalid duration, please try again.</p>
+<p class="notice hide">Invalid duration, please try again.</p>
 </div>
 
 <div class="btn-container">
+{{if $item.isUpdateMode}}
 <p class="btn-del"><a href="#">Del</a></p>
+{{/if}}
 <p class="btns btn-cancel"><span><a href="#">Cancel</a></span></p>
 <p class="btns btn-done"><span><a href="#">Done</a></span></p>
-<p class="btns btn-edit"><span><a href="#">Edit file</a></span></p>
+<p class="btns btn-edit"><span><a href="#">Edit Title</a></span></p>
 </div>
 </div>
-</div>
--->
+</script>
 
 </div>
 <p class="auto-height clear"></p>
@@ -288,16 +352,16 @@
 <li data-ytid="${ytId}">
 {{if isEmbedLimited || isZoneLimited || isMobileLimited}}
 {{if isEmbedLimited}}
-<a href="#" class="error"><span class="tip"><img src="images/bg_tip_bottom.png" alt="" /><span class="tip-left"><span class="tip-right"><span class="tip-middle">Not playable outside YouTube</span></span></span></span></a>
+<a href="#!pid=${id}&ytid=${ytId}" class="error"><span class="tip"><img src="images/bg_tip_bottom.png" alt="" /><span class="tip-left"><span class="tip-right"><span class="tip-middle">Not playable outside YouTube</span></span></span></span></a>
 {{else}}
 {{if isZoneLimited && isMobileLimited}}
-<a href="#" class="warning2"><span class="tip"><img src="images/bg_tip_bottom.png" alt="" /><span class="tip-left"><span class="tip-right"><span class="tip-middle">Not playable in some regions & on mobile device</span></span></span></span></a>
+<a href="#!pid=${id}&ytid=${ytId}" class="warning2"><span class="tip"><img src="images/bg_tip_bottom.png" alt="" /><span class="tip-left"><span class="tip-right"><span class="tip-middle">Not playable in some regions & on mobile device</span></span></span></span></a>
 {{else}}
 {{if isZoneLimited}}
-<a href="#" class="warning"><span class="tip"><img src="images/bg_tip_bottom.png" alt="" /><span class="tip-left"><span class="tip-right"><span class="tip-middle">Not playable in some regions</span></span></span></span></a>
+<a href="#!pid=${id}&ytid=${ytId}" class="warning"><span class="tip"><img src="images/bg_tip_bottom.png" alt="" /><span class="tip-left"><span class="tip-right"><span class="tip-middle">Not playable in some regions</span></span></span></span></a>
 {{/if}}
 {{if isMobileLimited}}
-<a href="#" class="warning"><span class="tip"><img src="images/bg_tip_bottom.png" alt="" /><span class="tip-left"><span class="tip-right"><span class="tip-middle">Not playable on mobile device</span></span></span></span></a>
+<a href="#!pid=${id}&ytid=${ytId}" class="warning"><span class="tip"><img src="images/bg_tip_bottom.png" alt="" /><span class="tip-left"><span class="tip-right"><span class="tip-middle">Not playable on mobile device</span></span></span></span></a>
 {{/if}}
 {{/if}}
 {{/if}}
@@ -307,9 +371,23 @@
 <span class="time"><span class="time-right"><span class="time-middle">${formatDuration(duration)}</span></span></span>
 </p>
 <h4 class="ellipsis multiline">${name}</h4>
+<p class="title">
+{{if beginTitleCard != null}}
+<a href="#!pid=${id}&ytid=${ytId}&tid=${beginTitleCard.id}" class="begin-title">Edit<span class="tip"><span class="tip-left"><span class="tip-right"><span class="tip-middle">Edit Title</span></span></span></span></a>
+{{/if}}
+{{if endTitleCard != null}}
+<a href="#!pid=${id}&ytid=${ytId}&tid=${endTitleCard.id}" class="end-title">Edit<span class="tip"><span class="tip-left"><span class="tip-right"><span class="tip-middle">Edit Title</span></span></span></span></a>
+{{/if}}
+</p>
 <p class="hover-func">
 <a href="#!pid=${id}&ytid=${ytId}" class="video-del">Video Del</a>
 <a href="#!pid=${id}&ytid=${ytId}" class="video-play">Video Play</a>
+{{if beginTitleCard == null}}
+<a href="#!pid=${id}&ytid=${ytId}" class="begin-title">Edit<span class="tip"><span class="tip-left"><span class="tip-right"><span class="tip-middle">Add Title</span></span></span></span></a>
+{{/if}}
+{{if endTitleCard == null}}
+<a href="#!pid=${id}&ytid=${ytId}" class="end-title">Edit<span class="tip"><span class="tip-left"><span class="tip-right"><span class="tip-middle">Add Title</span></span></span></span></a>
+{{/if}}
 </p>
 </li>
 </script>
@@ -347,7 +425,7 @@
       <ul class="select-list">
         <li><a href="/#!about=about">About us</a></li>
         <li><a href="/#!about=help">Help</a></li>
-        <li><a href="/#!about=report">Report</a></li>
+        <li><a href="/#!about=report">Feedback</a></li>
         <li><a href="/#!about=terms">Terms & Policy</a></li>
         <li><a href="/#!about=contact">Contact us</a></li>
         <li><a href="/#!about=partners">Partners</a></li>
@@ -384,7 +462,33 @@
 </div>
 </div>
 
+<div id="delete-prompt" class="lightbox-content overlay-l">
+<div class="overlay-container">
+<div class="overlay-wrap">
+<a href="#" class="btn-close">Close</a>
+<p class="content">Are you sure you want to delete this title?</p>
+<div class="overlay-btn">
+<p class="btns btn-del"><span><a href="#">Delete</a></span></p>
+<p class="btns btn-no"><span><a href="#">No</a></span></p>
+</div>
+</div>
+</div>
+</div>
+
 <div id="unsave-prompt" class="lightbox-content overlay-l">
+<div class="overlay-container">
+<div class="overlay-wrap">
+<a href="#" class="btn-close">Close</a>
+<p class="content">Unsaved changes will be lost, are you sure you want to leave?</p>
+<div class="overlay-btn">
+<p class="btns btn-leave"><span><a href="#">Leave</a></span></p>
+<p class="btns btn-no"><span><a href="#">No</a></span></p>
+</div>
+</div>
+</div>
+</div>
+
+<div id="unsave-titlecard-prompt" class="lightbox-content overlay-l">
 <div class="overlay-container">
 <div class="overlay-wrap">
 <a href="#" class="btn-close">Close</a>
