--- a/epcurate-info.html
+++ b/epcurate-info.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+<html>
 <head>
 <meta charset="utf-8" />
 <meta http-equiv="cache-control" content="no-cache" />
@@ -75,10 +76,14 @@
 <div id="title-func" class="clearfix">
 <p class="required"><acronym title="Required field" class="mark-required">*</acronym>Required field</p>
 </div>
-
 <div id="content-main-wrap">
 <div class="constrain">
 <div id="epcurate-info">
+<!-- template = #epcurate-info-tmpl -->
+</div>
+</div>
+</div>
+</div>
 
 <script id="epcurate-info-tmpl" type="text/x-jquery-tmpl">
 <div class="fminput clearfix">
@@ -95,11 +100,6 @@
 </div>
 </div>
 </script>
-
-</div>
-</div>
-</div>
-</div>
 
 <div class="form-btn">
 <div class="wrap clearfix">
@@ -123,7 +123,7 @@
       <ul class="select-list">
         <li><a href="/#!about=about">About us</a></li>
         <li><a href="/#!about=help">Help</a></li>
-        <li><a href="/#!about=report">Report</a></li>
+        <li><a href="/#!about=report">Feedback</a></li>
         <li><a href="/#!about=terms">Terms & Policy</a></li>
         <li><a href="/#!about=contact">Contact us</a></li>
         <li><a href="/#!about=partners">Partners</a></li>
