--- a/epcurate-curation.html
+++ b/epcurate-curation.html
@@ -11,7 +11,7 @@
 <link rel="stylesheet" href="stylesheets/epcurate.css" />
 <link rel="stylesheet" href="stylesheets/ep-curation.css" />
 <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.2/jquery.min.js"></script>
-<script src="http://ajax.googleapis.com/ajax/libs/jqueryui/1.8.23/jquery-ui.min.js"></script>
+<script src="http://ajax.googleapis.com/ajax/libs/jqueryui/1.8.24/jquery-ui.min.js"></script>
 <script src="javascripts/nn-sdk.js"></script>
 <script src="javascripts/jquery.mousewheel.min.js"></script>
 <script src="javascripts/jquery.ellipsis.js"></script>
@@ -504,6 +504,14 @@
 </div>
 </div>
 </div>
+
+<div id="preload-image" class="hide">
+<!-- template = #preload-image-tmpl-item -->
+</div>
+
+<script id="preload-image-tmpl-item" type="text/x-jquery-tmpl">
+<img src="${image}" alt="" />
+</script>
 
 </body>
 </html>
