--- a/episode-list.html
+++ b/episode-list.html
@@ -9,7 +9,7 @@
 <link rel="stylesheet" href="stylesheets/lightbox.css" />
 <link rel="stylesheet" href="stylesheets/episode.css" />
 <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.2/jquery.min.js"></script>
-<script src="http://ajax.googleapis.com/ajax/libs/jqueryui/1.8.23/jquery-ui.min.js"></script>
+<script src="http://ajax.googleapis.com/ajax/libs/jqueryui/1.8.24/jquery-ui.min.js"></script>
 <script src="javascripts/nn-sdk.js"></script>
 <script src="javascripts/jquery.mousewheel.min.js"></script>
 <script src="javascripts/jquery.ellipsis.js"></script>
@@ -62,19 +62,19 @@
 <div id="content-wrap">
 
 <div id="content-nav">
+<div id="func-nav">
+<ul>
 <!-- template = #episode-nav-tmpl -->
+</ul>
+</div>
 </div>
 
 <script id="episode-nav-tmpl" type="text/x-jquery-tmpl">
 {{if contentType == CMS_CONF.YOUR_FAVORITE}}
-&nbsp;
+<li>&nbsp;</li>
 {{else}}
-<div id="func-nav">
-<ul>
 <li class="active"><a href="episode-list.html?id=${id}" class="episode">Episode list</a></li>
 <li><a href="channel-setting.html?id=${id}" class="setting">Settings</a></li>
-</ul>
-</div>
 {{/if}}
 </script>
 
