--- a/epcurate-curation.html
+++ b/epcurate-curation.html
@@ -22,6 +22,7 @@
 <script src="javascripts/jquery.titlecard.js"></script>
 <script src="javascripts/jquery.tmpl.min.js"></script>
 <script src="javascripts/jquery.cookie.js"></script>
+<script src="javascripts/jquery.countdown.min.js"></script>
 <script src="javascripts/json2.js"></script>
 <script src="javascripts/purl.js"></script>
 <script src="javascripts/swfupload/swfupload.js"></script>
@@ -116,7 +117,7 @@
 <ul>
 <li id="btn-play"></li>
 <li id="btn-pause" class="hide"></li>
-<li id="play-time"></li>
+<li id="play-time"><span class="played">00:00</span>&nbsp;/&nbsp;<span class="duration">00:07</span></li>
 </ul>
 </div>
 </div>
