--- a/channel-add.html
+++ b/channel-add.html
@@ -114,7 +114,7 @@ Add your 9x9.tv creations and activity to your facebook timeline
 <div class="fminput clearfix">
 <label>Description</label>
 <div class="fmfield">
-<p class="textarea"><span><textarea name="intro" id="intro" cols="80" class="textarea"></textarea></span></p>
+<p class="textarea"><span><span><textarea name="intro" id="intro" cols="80" class="textarea"></textarea></span></span></p>
 <span class="notice"><span id="intro-charcounter">144</span><br />Best within 144 characters</span>
 </div>
 </div>
