--- a/epcurate-info.html
+++ b/epcurate-info.html
@@ -96,7 +96,7 @@
 <div class="fminput clearfix">
 <label for="intro">Episode description</label>
 <div class="fmfield">
-<p class="textarea"><span><textarea name="intro" id="intro" cols="80" class="textarea">${intro}</textarea></span></p>
+<p class="textarea"><span><span><textarea name="intro" id="intro" cols="80" class="textarea">${intro}</textarea></span></span></p>
 </div>
 </div>
 </script>
