--- a/epcurate-curation.html
+++ b/epcurate-curation.html
@@ -10,6 +10,7 @@
 <link rel="stylesheet" href="stylesheets/uniform.css" />
 <link rel="stylesheet" href="stylesheets/epcurate.css" />
 <link rel="stylesheet" href="stylesheets/ep-curation.css" />
+<link rel="stylesheet" href="stylesheets/titlecard-hide.css" />
 <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.2/jquery.min.js"></script>
 <script src="http://ajax.googleapis.com/ajax/libs/jqueryui/1.8.24/jquery-ui.min.js"></script>
 <script src="javascripts/nn-sdk.js"></script>
@@ -117,7 +118,7 @@
 <ul>
 <li id="btn-play"></li>
 <li id="btn-pause" class="hide"></li>
-<li id="play-time"><span class="played">00:00</span>&nbsp;/&nbsp;<span class="duration">00:07</span></li>
+<li id="play-time" class="last"><span class="played">00:00</span>&nbsp;/&nbsp;<span class="duration">00:07</span></li>
 </ul>
 </div>
 </div>
@@ -164,7 +165,7 @@
 <div class="wrap">
 <div class="text-container">
 <h5>Text</h5>
-<textarea name="text" id="text" cols="80" class="textarea">{{if '' == message}}My video{{else}}${message}{{/if}}</textarea>
+<p class="textarea"><span><span><textarea name="text" id="text" cols="80" class="textarea">{{if '' == message}}My video{{else}}${message}{{/if}}</textarea></span></span></p>
 </div>
 
 <div class="font-container">
