--- a/channel-setting.html
+++ b/channel-setting.html
@@ -22,6 +22,7 @@
 <script src="javascripts/purl.js"></script>
 <script src="javascripts/swfupload/swfupload.js"></script>
 <script src="javascripts/vertical.slider.js"></script>
+<script src="javascripts/config.js"></script>
 <script src="javascripts/basic.js"></script>
 <script src="javascripts/controller.js"></script>
 <script src="javascripts/channel.js"></script>
