--- a/epcurate-info.html
+++ b/epcurate-info.html
@@ -21,6 +21,7 @@
 <script src="javascripts/json2.js"></script>
 <script src="javascripts/purl.js"></script>
 <script src="javascripts/vertical.slider.js"></script>
+<script src="javascripts/config.js"></script>
 <script src="javascripts/basic.js"></script>
 <script src="javascripts/controller.js"></script>
 <script src="javascripts/epcurate.js"></script>
