--- a/epcurate-publish.html
+++ b/epcurate-publish.html
@@ -23,6 +23,7 @@
 <script src="javascripts/purl.js"></script>
 <script src="javascripts/swfupload/swfupload.js"></script>
 <script src="javascripts/vertical.slider.js"></script>
+<script src="javascripts/config.js"></script>
 <script src="javascripts/basic.js"></script>
 <script src="javascripts/controller.js"></script>
 <script src="javascripts/epcurate.js"></script>
