--- a/login.html
+++ b/login.html
@@ -5,6 +5,7 @@
 <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.2/jquery.min.js"></script>
 <script src="javascripts/nn-sdk.js"></script>
 <script src="javascripts/purl.js"></script>
+<script src="javascripts/config.js"></script>
 <title>9x9.tv - Login</title>
 </head>
 <body>
@@ -35,7 +36,7 @@ $(function () {
         }
         var qrystring = $(this).serialize(),
             parameter = $.url('http://fake.url.dev.teltel.com/?' + qrystring).param();
-        nn.api('POST', '/api/login', parameter, function (user) {
+        nn.api('POST', CMS_CONF.API('/api/login'), parameter, function (user) {
             if (!user || !user.id) {
                 alert('Login failed, please try again.');
             } else {
